@@ -2373,7 +2373,10 @@ RQuery::$defaultFilters['rule']['rule']['operators']['is.unused.fast'] = Array(
         {
             $sub->apiCache[$unused_flag] = Array();
 
-            $apiCmd = '<show><running><rule-use><rule-base>' . $rule_base . '</rule-base><type>unused</type><vsys>' . $sub->name() . '</vsys></rule-use></running></show>';
+            if( $context->object->owner->owner->version < 81 )
+                $apiCmd = '<show><running><rule-use><rule-base>' . $rule_base . '</rule-base><type>unused</type><vsys>' . $sub->name() . '</vsys></rule-use></running></show>';
+            else
+                $apiCmd = '<show><running><rule-use><highlight><rule-base>' . $rule_base . '</rule-base><type>unused</type><vsys>' . $sub->name() . '</vsys></highlight></rule-use></running></show>';
 
             if( $sub->isVirtualSystem() )
             {
