@@ -59,6 +59,8 @@ bugfix:
 - fix class-VirtualRouter | fix if object not found for getting the interface IP
 - fix description field for rules and objects was increased to 1023 characters with PAN-OS 7.1 | update all relevant places
 - fix class-AddressRuleContainer - improve setAny, offline config file has now any as correct entry
+- fix rule 'filter=(rule is.unused.fast)' for PAN-OS version > 8.1
+
 
 1.5.14 (20180227)
 * class PanAPIConnector : added support for installed app/av/wildfire/threat-version / PA-VM uuid / cpuid
